added basic section divs for content.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header>
+    <div class="row1">
+      <div class="searchbar"></div>
+      <div class="notifications"></div>
+      <div class="user"></div>
+    </div>
+    <div class="row2">
+      <div class="profile-summary"></div>
+      <div class="actions"></div>
+    </div>
+  </header>
+  <aside>
+    <div class="logo"></div>
+    <div class="pages"></div>
+    <div class="settings"></div>
+  </aside>
+  <main>
+    <div class="projects"></div>
+    <div class="announcements"></div>
+    <div class="trending"></div>
+  </main>
 </body>
 </html>
