Added more html structure. Organized classes in way that I think will support grid styling.

--- a/index.html
+++ b/index.html
@@ -8,26 +8,199 @@
   <title>Document</title>
 </head>
 <body>
+
   <header>
+
     <div class="row1">
-      <div class="searchbar"></div>
-      <div class="notifications"></div>
-      <div class="user"></div>
+      <div class="searchbar">
+        <i></i>
+        <input type="text">
+      </div>
+
+      <div class="notifications">
+        <a href="#"><i></i></a>
+      </div>
+
+      <div class="user">
+        <img src="" alt="">
+        <h3></h3>
+      </div>
     </div>
+
     <div class="row2">
-      <div class="profile-summary"></div>
-      <div class="actions"></div>
+      <div class="profile-summary">
+        <img src="" alt="">
+        <p></p>
+        <h2></h2>
+      </div>
+
+      <div class="actions">
+        <button>New</button>
+        <button>Upload</button>
+        <button>Share</button>
+      </div>
     </div>
+    
   </header>
+
+
   <aside>
-    <div class="logo"></div>
-    <div class="pages"></div>
-    <div class="settings"></div>
+
+    <div class="logo">
+      <i></i>
+      <a href="#">Dashboard</a>
+    </div>
+
+    <div class="pages">
+      <div class="tile">
+        <i></i>
+        <a href="#"></a>
+      </div>
+      <div class="tile">
+        <i></i>
+        <a href="#"></a>
+      </div>
+      <div class="tile">
+        <i></i>
+        <a href="#"></a>
+      </div>
+      <div class="tile">
+        <i></i>
+        <a href="#"></a>
+      </div>
+      <div class="tile">
+        <i></i>
+        <a href="#"></a>
+      </div>
+      <div class="tile">
+        <i></i>
+        <a href="#"></a>
+      </div>
+    </div>
+
+    <div class="settings">
+      <div class="tile">
+        <i></i>
+        <a href="#"></a>
+      </div>
+      <div class="tile">
+        <i></i>
+        <a href="#"></a>
+      </div>
+      <div class="tile">
+        <i></i>
+        <a href="#"></a>
+      </div>
+    </div>
+
   </aside>
+
+
   <main>
-    <div class="projects"></div>
-    <div class="announcements"></div>
-    <div class="trending"></div>
+
+    <div class="projects-container">
+      <div class="project-card">
+        <h3></h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit consequuntur atque, explicabo corporis rerum voluptatum quod. Beatae dicta nesciunt magni delectus, quaerat deserunt. Nisi cum maiores minus ullam doloribus architecto?</p>
+        <div class="project-card-icons">
+          <i></i>
+          <i></i>
+          <i></i>
+        </div>
+      </div>
+      <div class="project-card">
+        <h3></h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit consequuntur atque, explicabo corporis rerum voluptatum quod. Beatae dicta nesciunt magni delectus, quaerat deserunt. Nisi cum maiores minus ullam doloribus architecto?</p>
+        <div class="project-card-icons">
+          <i></i>
+          <i></i>
+          <i></i>
+        </div>
+      </div>
+      <div class="project-card">
+        <h3></h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit consequuntur atque, explicabo corporis rerum voluptatum quod. Beatae dicta nesciunt magni delectus, quaerat deserunt. Nisi cum maiores minus ullam doloribus architecto?</p>
+        <div class="project-card-icons">
+          <i></i>
+          <i></i>
+          <i></i>
+        </div>
+      </div>
+      <div class="project-card">
+        <h3></h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit consequuntur atque, explicabo corporis rerum voluptatum quod. Beatae dicta nesciunt magni delectus, quaerat deserunt. Nisi cum maiores minus ullam doloribus architecto?</p>
+        <div class="project-card-icons">
+          <i></i>
+          <i></i>
+          <i></i>
+        </div>
+      </div>
+      <div class="project-card">
+        <h3></h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit consequuntur atque, explicabo corporis rerum voluptatum quod. Beatae dicta nesciunt magni delectus, quaerat deserunt. Nisi cum maiores minus ullam doloribus architecto?</p>
+        <div class="project-card-icons">
+          <i></i>
+          <i></i>
+          <i></i>
+        </div>
+      </div>
+      <div class="project-card">
+        <h3></h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit consequuntur atque, explicabo corporis rerum voluptatum quod. Beatae dicta nesciunt magni delectus, quaerat deserunt. Nisi cum maiores minus ullam doloribus architecto?</p>
+        <div class="project-card-icons">
+          <i></i>
+          <i></i>
+          <i></i>
+        </div>
+      </div>
+    </div>
+
+    <div class="announcements-container">
+      <div class="announcement">
+        <h4></h4>
+        <p></p>
+      </div> 
+      <div class="announcement">
+        <h4></h4>
+        <p></p>
+      </div> 
+      <div class="announcement">
+        <h4></h4>
+        <p></p>
+      </div> 
+    </div>
+
+    <div class="trending-container">
+      <div class="profile-chip">
+        <img src="" alt="">
+        <div class="profile-chip-text">
+          <h4></h4>
+          <p></p>
+        </div>
+      </div>
+      <div class="profile-chip">
+        <img src="" alt="">
+        <div class="profile-chip-text">
+          <h4></h4>
+          <p></p>
+        </div>
+      </div>
+      <div class="profile-chip">
+        <img src="" alt="">
+        <div class="profile-chip-text">
+          <h4></h4>
+          <p></p>
+        </div>
+      </div>
+      <div class="profile-chip">
+        <img src="" alt="">
+        <div class="profile-chip-text">
+          <h4></h4>
+          <p></p>
+        </div>
+      </div>
+    </div>
+
   </main>
 </body>
 </html>
